--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   
-<link href="styles.c3d8a75fe4400ae90d0b.bundle.css" rel="stylesheet"/></head>
+</head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.a0eab6b1ad5ba2a5d981.bundle.js"></script><script type="text/javascript" src="polyfills.8e557e7d346c302fbc0a.bundle.js"></script><script type="text/javascript" src="scripts.22dccaee7b9029ed93b9.bundle.js"></script><script type="text/javascript" src="vendor.b813f1b0e7ddac2cc894.bundle.js"></script><script type="text/javascript" src="main.2c168d34d1f67eb68f41.bundle.js"></script></body>
+<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="scripts.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
 </html>
